--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
-    "token": "",
-    "prefix": "-",
+    "token": ""MzkxMzU1MjMzMTg1NTYyNjI1.Xq6bAg.99Ae7YIPWp2Tq1WzMvwbDtGQ2r0"",
+    "prefix": "$",
     "ID": "",
-    "color": "#034df8"
+    "color": "#ٴٴ034df8"
 }
