--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "token": ""MzkxMzU1MjMzMTg1NTYyNjI1.Xq6bAg.99Ae7YIPWp2Tq1WzMvwbDtGQ2r0"",
+    "token": ""MkxMnU1MjMzMTg1NTYyNjI1.Xq6bAg.99Ae7YIPWp2Tq1WzMvwbDtGQ2r0"",
     "prefix": "$",
     "ID": "",
     "color": "#ٴٴ034df8"
