--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "token": ""MkxMnU1MjMzMTg1NTYyNjI1.Xq6bAg.99Ae7YIPWp2Tq1WzMvwbDtGQ2r0"",
+    "token": "NDM1NTc2NzMzMDg1OTkwOTEz.XmrsRA.AhD2oQlfKHuW5Aqs7ynXd25af1o",
     "prefix": "$",
     "ID": "",
     "color": "#ٴٴ034df8"
